# ms

./: .gitignore  README.md  manifest.example.toml  manifest.toml  pyproject.toml
ms/: __init__.py  cli.py  gitops.py  manifest.py  mirror.py
